[package]
name = "my_psp22_wrapper"
version = "3.1.1"
authors = ["Brushfam <dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }

# These dependencies
openbrush = { version = "3.1.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22"] }

ibc = { path = "../trait_ibc", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "my_psp22_wrapper"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ibc/std",
    "ink/std",
    "openbrush/std",
    #"serde",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
