[package]
name = "my_psp37_wrapper"
version = "3.1.1"
authors = ["Brushfam <dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }

# These dependencies
openbrush = { version = "3.1.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp37"] }
trait-ibc = { path = "../trait-ibc", default-features = false, features = ["ink-as-dependency"] }
ibc = { version = "0.28.0", default-features = false, features = ["parity-scale-codec", "serde"]}

[lib]
name = "my_psp37_wrapper"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ibc/std",
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
    "trait-ibc/std"
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
