[package]
name = "ibc"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }

serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["alloc"] }
serde-json-wasm = { version = "0.5.1", git = "https://github.com/baidang201/serde-json-wasm.git", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "ibc"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
